--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <div id="single-card" class="card">
-            <img id="card-image" src="/images/back_of_card.png" alt="Card">
+            <img id="card-image" src="images/back_of_card.png" alt="Card">
         </div>
         <div class="controls">
             <button id="shuffle-btn">Shuffle</button>
@@ -25,6 +25,6 @@
             <p><a href="whataretheodds.html">What are the odds?</a></p>
         </div>
     </main>
-    <script src="/JS/deckofcards.js"></script>
+    <script src="JS/deckofcards.js"></script>
 </body>
 </html>
