--- a/coinflip.html
+++ b/coinflip.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deck of Cards</title>
-    <link rel="stylesheet" href="/CSS/singlecoinflip.css">
+    <link rel="stylesheet" href="CSS/singlecoinflip.css">
 </head>
 <body>
     <header>
@@ -12,8 +12,8 @@
     </header>
     <main>
         <div id="coin-container">
-            <img id="coin" src="/images/coin-heads.png" alt="Coin">
-            <img id="coin2" src="/images/coin-tails.png" alt="Coin2">
+            <img id="coin" src="images/coin-heads.png" alt="Coin">
+            <img id="coin2" src="images/coin-tails.png" alt="Coin2">
         </div>
         <div class="controls">
             <button id="flip-btn">Flip Coin</button>
@@ -29,5 +29,5 @@
             <p><a href="whataretheodds.html">What are the odds?</a></p>
         </div>
     </main>
-    <script src="/JS/singlecoinflip.js"></script>
+    <script src="JS/singlecoinflip.js"></script>
 </body>
