--- a/singledice.html
+++ b/singledice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deck of Cards</title>
-    <link rel="stylesheet" href="/CSS/dice.css">
+    <link rel="stylesheet" href="CSS/dice.css">
 </head>
 <body>
     <header>
@@ -12,8 +12,8 @@
     </header>
     <main>
         <div id="die-container">
-            <img id="die" src="/images/1-die.png" alt="Die">
-            <img id="die2" src="/images/1-die.png" alt="Die2">
+            <img id="die" src="images/1-die.png" alt="Die">
+            <img id="die2" src="images/1-die.png" alt="Die2">
         </div>
         <div class="controls">
             <button id="roll-btn">Roll Dice</button>
@@ -29,5 +29,5 @@
             <p><a href="whataretheodds.html">What Are The Odds?</a></p>
         </div>
     </main>
-    <script src="/JS/dice.js"></script>
+    <script src="JS/dice.js"></script>
 </body>
